# kernighan-ritchie-c

./: README.md
chapter-1/subchapter-1/: CMakeLists.txt  exercise-1.c  exercise-2.c  start-program.c
chapter-1/subchapter-10/: CMakeLists.txt  exercise-1.c  exercise-2.c  exercise-3.c  exercise-4.c  exercise-5.c  start-program.c
chapter-1/subchapter-2/: CMakeLists.txt  exercise-1.c  exercise-2.c  start-program.c
chapter-1/subchapter-3/: CMakeLists.txt  exercise-1.c  start-program.c
chapter-1/subchapter-4/: CMakeLists.txt  start-program.c
chapter-1/subchapter-5/section-4/: CMakeLists.txt  exercise-1.c  exercise-2.c  start-program.c
chapter-1/subchapter-6/: CMakeLists.txt  exercise-1.c  exercise-2.c  start-program.c
chapter-1/subchapter-7/: CMakeLists.txt  exercise-1.c  start-program.c
chapter-1/subchapter-8/: CMakeLists.txt  start-program.c
chapter-1/subchapter-9/: CMakeLists.txt  exercise-1.c  exercise-2.c  exercise-3.c  exercise-4.c  start-program.c
chapter-2/subchapter-1/: info.txt
chapter-2/subchapter-10/: CMakeLists.txt  exercise-1.c  start-program.c
chapter-2/subchapter-11/: CMakeLists.txt  exercise-1.c
chapter-2/subchapter-12/: info.txt
chapter-2/subchapter-2/: CMakeLists.txt  exercise-1.c
chapter-2/subchapter-3/: info.txt
chapter-2/subchapter-4/: info.txt
chapter-2/subchapter-5/: info.txt
chapter-2/subchapter-6/: CMakeLists.txt  exercise-1.c
chapter-2/subchapter-7/: CMakeLists.txt  exercise-1.c
chapter-2/subchapter-8/: CMakeLists.txt  exercise-1.c  exercise-2.c
chapter-2/subchapter-9/: CMakeLists.txt  exercise-1.c  exercise-2.c  exercise-3.c
chapter-3/subchapter-1/: info.txt
chapter-3/subchapter-2/: info.txt
chapter-3/subchapter-3/: CMakeLists.txt  exercise-1.c  start-program.c
chapter-3/subchapter-4/: CMakeLists.txt  exercise-1.c
(+24 files in other folders)
